# alpha-zero

./: .gitignore  Cargo.toml  env
src/: alpha_zero.rs  coord_compressor.rs  lib.rs  main.rs  tictactoe.rs
src/alpha_zero/: alpha_zero_adapter.rs  alpha_zero_net.rs  battle.rs  executor_scope.rs  game.rs  generate_game.rs  l2_norm.rs  mcts.rs  network_batched_executor.rs  timer.rs  util.rs
src/tictactoe/: alpha_zero_adapter.rs  board.rs  nn.rs  visualize.rs
