[package]
name = "pytorch"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = { version = "1.0.82", features = ["backtrace"] }
futures = "0.3.30"
rand = "0.8.5"
serde = "1.0.198"
serde_json = "1.0.116"
tch = "0.15.0"
tokio = { version = "1.37.0", features = ["full"] }
